mobilized section with css changes

--- a/site.css
+++ b/site.css
@@ -78,3 +78,6 @@ h3 {font-family: 'Waiting for the Sunrise', cursive; font-weight: bold; font-siz
 .b3 {margin:-5px 0 0 280px; background-position:-628px 0} /*Pale*/
 .b5 {margin:-5px 0 0 402px; background-position:-245px 0} /*Chickbock*/
 .b4 {margin:-5px 0 0 526px; background-position:-368px 0} /*IPA*/
+
+
+/*Mobile Section*/
